--- a/styles/SettingLobby.css
+++ b/styles/SettingLobby.css
@@ -282,6 +282,10 @@
   gap: 1rem;
 }
 
+.BetAmountText {
+  transform: translateX(-5rem) !important;
+}
+
 .input-container {
   display: flex;
   justify-content: space-between;
