--- a/styles/Global.css
+++ b/styles/Global.css
@@ -22,6 +22,14 @@
     overflow: hidden;
   }
 
+  @font-face {
+    font-family: 'RangerRegular';
+    src: url('../fonts/spaceranger.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+  }
+
+
   .button {
     display: block;
     position: relative;
