--- a/styles/SettingLobby.css
+++ b/styles/SettingLobby.css
@@ -586,4 +586,23 @@
   text-shadow: 
   #ffffff 0px 0px 40px,
   #ffffff 0px 0px 80px;
+  animation: pulseShadow 3.5s ease-in-out infinite;
+}
+
+@keyframes pulseShadow {
+  0% {
+    text-shadow: 
+      #ffffff 0px 0px 20px,
+      #ffffff 0px 0px 40px;
+  }
+  50% {
+    text-shadow: 
+      #ffffff 0px 0px 40px,
+      #ffffff 0px 0px 80px;
+  }
+  100% {
+    text-shadow: 
+      #ffffff 0px 0px 20px,
+      #ffffff 0px 0px 40px;
+  }
 }
