--- a/styles/SettingLobby.css
+++ b/styles/SettingLobby.css
@@ -116,6 +116,7 @@
   overflow: hidden;
   border-radius: 8px;
   transition: transform 0.5s ease; 
+  z-index: 99 !important;
 }
 
 .MapSelectDiv img {
@@ -204,6 +205,11 @@
   cursor: pointer;
   animation: pulseBg 1.6s ease-in-out infinite;
   will-change: background-color, box-shadow;
+  transition: background 1s ease; 
+}
+
+.CreateLobbyNewDiv:active {
+  transform: scale(1.01);
 }
 
 @keyframes pulseBg {
@@ -228,13 +234,9 @@
   transition: background 1s ease; 
 }
 
-.CreateLobbyNewDiv:hover .InsideCreateLobbyNew {
-  background: linear-gradient(
-    100deg,
-    rgba(200, 18, 18, 1) 50%,
-    rgba(120, 10, 10, 1) 100%
-  ); 
-}
+
+
+
 
 
 .InsideCreateLobbyNew p {
