--- a/styles/LeaderBoardPage.css
+++ b/styles/LeaderBoardPage.css
@@ -86,3 +86,53 @@
       filter: drop-shadow(0 0 0.5rem #00fbff);
     }
   }
+
+  .AllLeaderBoardDiv {
+    display: flex;
+    flex-direction: column; 
+  }
+
+  .TopPlayersDiv {
+    display: flex;
+    flex-direction: row;
+    position: absolute;
+    left: 3.5vw;
+    top: 30vh;
+  }
+
+  .TopPlayerBox {
+    background: url(../imgs/SilverBoxLeaderBoard.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 18rem;
+    height: 16rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+
+.TextDetail {
+  width: 77%;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.DetailInsideDiv {
+  display: flex;
+  justify-content: space-between;
+  padding: 0px 5px;
+}
+
+.DetailInsideDiv p:nth-of-type(1) {
+  color: #858585;
+}
+
+.LineDetailInsideDiv {
+  width: 100%;
+background: #444444;
+height: 1px;
+}
