--- a/styles/LeaderBoardPage.css
+++ b/styles/LeaderBoardPage.css
@@ -119,12 +119,15 @@
   display: flex;
   flex-direction: column;
   gap: 5px;
+  position: absolute;
+  bottom: 2rem;
 }
 
 .DetailInsideDiv {
   display: flex;
   justify-content: space-between;
   padding: 0px 5px;
+  font-family: "Afacad", sans-serif;
 }
 
 .DetailInsideDiv p:nth-of-type(1) {
