--- a/styles/LeaderBoardPage.css
+++ b/styles/LeaderBoardPage.css
@@ -112,6 +112,7 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+    position: relative;
   }
 
 .TextDetail {
@@ -161,4 +162,19 @@ height: 1px;
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.SteamImageDivLeader {
+  display: flex;
+  flex-direction: row;
+}
+
+.VectorIconLeft {
+  width: 20px;
+  height: 10px;
+}
+
+.VectorIconRight {
+  width: 20px;
+  height: 10px;
 }
