--- a/styles/LeaderBoardPage.css
+++ b/styles/LeaderBoardPage.css
@@ -17,7 +17,7 @@
 .TopTextLeaderBoard {
     font-family: "RangerRegular", sans-serif;
     position: absolute;
-    left: 4vw;
+    left: 4.5vw;
     top: 10vh;
   }
   
@@ -96,13 +96,44 @@
     display: flex;
     flex-direction: row;
     position: absolute;
-    left: 3.5vw;
-    top: 30vh;
+    left: 4vw;
+    top: 25vh;
     gap: 30px;
   }
 
   .TopPlayerBoxSilver {
     background: url(../imgs/SilverBoxLeaderBoard.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 20rem;
+    height: 18rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    position: relative;
+  }
+
+  .TopPlayerBoxGold {
+    background: url(../imgs/GoldBoxLeaderBoard.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 20rem;
+    height: 18rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    position: relative;
+    transform: translateY(-3rem);
+  }
+
+  .TopPlayerBoxBronze {
+    background: url(../imgs/BronzeBoxLeaderBoard.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
@@ -122,7 +153,7 @@
   flex-direction: column;
   gap: 5px;
   position: absolute;
-  bottom: 1rem;
+  bottom:2rem;
 }
 
 .DetailInsideDiv {
@@ -209,15 +240,15 @@ height: 1px;
   position: absolute;
   display: flex;
   flex-direction: column;
-  gap: 3px;
-  margin-bottom: 20px;
+  gap: 6px;
+  margin-bottom: 45px;
 }
 
 .SteamUserNamePlayer h1 {
-  font-size: 19px;
+  font-size: 21px;
 }
 
 .SteamUserNamePlayer p {
-  font-size: 12px;
+  font-size: 13px;
   color: #898989;
 }
