--- a/styles/LeaderBoardPage.css
+++ b/styles/LeaderBoardPage.css
@@ -322,3 +322,61 @@ backdrop-filter: blur(17.9px);
   transform: translateY(-1px);
 
 }
+
+.LosesDivBg {
+  background: url(../imgs/LoseBg.png) ;
+  background-size: contain;
+  width: 8rem;
+  height: 2.6rem;
+  background-repeat: no-repeat;
+  position: absolute;
+  right: 1rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  font-family: "Afacad", sans-serif;
+
+}
+
+.LosesDivBg p:nth-of-type(1) {
+  position: absolute;
+  left: 20px;
+  font-size: 16px;
+}
+
+.LosesDivBg p:nth-of-type(2) {
+  position: absolute;
+  left: 78px;
+  font-size: 14px;
+}
+
+
+.WinsDivBg {
+  background: url(../imgs/WinBg.png) ;
+  background-size: contain;
+  width: 8rem;
+  height: 2.6rem;
+  background-repeat: no-repeat;
+  position: absolute;
+  right: 1rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  font-family: "Afacad", sans-serif;
+
+}
+
+.WinsDivBg p:nth-of-type(1) {
+  position: absolute;
+  left: 20px;
+  font-size: 16px;
+}
+
+.WinsDivBg p:nth-of-type(2) {
+  position: absolute;
+  left: 78px;
+  font-size: 14px;
+}
+
