--- a/styles/LeaderBoardPage.css
+++ b/styles/LeaderBoardPage.css
@@ -355,11 +355,11 @@ backdrop-filter: blur(17.9px);
 .WinsDivBg {
   background: url(../imgs/WinBg.png) ;
   background-size: contain;
-  width: 8rem;
+  width: 7.4rem;
   height: 2.6rem;
   background-repeat: no-repeat;
   position: absolute;
-  right: 1rem;
+  right: 9.5rem;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -376,7 +376,34 @@ backdrop-filter: blur(17.9px);
 
 .WinsDivBg p:nth-of-type(2) {
   position: absolute;
-  left: 78px;
+  left: 70px;
   font-size: 14px;
 }
 
+.killsDivBg {
+  background: url(../imgs/KillBg.png); 
+  background-size: contain;
+  width: 8.7rem;
+  height: 2.6rem;
+  background-repeat: no-repeat;
+  position: absolute;
+  right: 17.5rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  font-family: "Afacad", sans-serif;
+
+}
+
+.killsDivBg p:nth-of-type(1) {
+  position: absolute;
+  left: 25px;
+  font-size: 18px;
+}
+
+.killsDivBg p:nth-of-type(2) {
+  position: absolute;
+  left: 80px;
+  font-size: 16px;
+}
