--- a/styles/LeaderBoardPage.css
+++ b/styles/LeaderBoardPage.css
@@ -326,7 +326,7 @@ backdrop-filter: blur(17.9px);
 .LosesDivBg {
   background: url(../imgs/LoseBg.png) ;
   background-size: contain;
-  width: 8rem;
+  width: 7.9rem;
   height: 2.6rem;
   background-repeat: no-repeat;
   position: absolute;
@@ -336,7 +336,7 @@ backdrop-filter: blur(17.9px);
   justify-content: center;
   align-items: center;
   font-family: "Afacad", sans-serif;
-
+  box-shadow: rgba(255, 0, 0, 0.162) 0px 5px 15px;
 }
 
 .LosesDivBg p:nth-of-type(1) {
@@ -355,7 +355,8 @@ backdrop-filter: blur(17.9px);
 .WinsDivBg {
   background: url(../imgs/WinBg.png) ;
   background-size: contain;
-  width: 7.4rem;
+  width: 7.3rem;
+  border-radius: 4px;
   height: 2.6rem;
   background-repeat: no-repeat;
   position: absolute;
@@ -365,7 +366,7 @@ backdrop-filter: blur(17.9px);
   justify-content: center;
   align-items: center;
   font-family: "Afacad", sans-serif;
-
+  box-shadow: rgba(0, 255, 115, 0.114) 0px 5px 15px;
 }
 
 .WinsDivBg p:nth-of-type(1) {
