--- a/styles/LeaderBoardPage.css
+++ b/styles/LeaderBoardPage.css
@@ -408,3 +408,16 @@ backdrop-filter: blur(17.9px);
   left: 80px;
   font-size: 16px;
 }
+
+.BadegsDivs {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  justify-content: start;
+  position: absolute;
+  left: 20rem;
+}
+
+.BadegsDivs img {
+  width: 40px;
+}
