--- a/styles/LeaderBoardPage.css
+++ b/styles/LeaderBoardPage.css
@@ -450,7 +450,7 @@ backdrop-filter: blur(17.9px);
 }
 
 .modal-content {
-  background: url(../imgs/badgeModalBg.png) rgba(9, 9, 9, 0.545) ;
+  background: url(../imgs/badgeModalBg.png) rgba(9, 9, 9, 0.463) ;
 box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 backdrop-filter: blur(24.2px);
 -webkit-backdrop-filter: blur(24.2px);
@@ -460,11 +460,16 @@ backdrop-filter: blur(24.2px);
   width: 694px;
   position: relative;
   animation: slideIn 0.3s ease;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .modal-content img {
   width: 230px;
   height: 230px;
+  position: absolute;
+  left: 3rem;
 }
 
 .close {
