--- a/styles/LeaderBoardPage.css
+++ b/styles/LeaderBoardPage.css
@@ -490,3 +490,32 @@ backdrop-filter: blur(24.2px);
   from { opacity: 1; }
   to   { opacity: 0; }
 }
+
+.DetailModalTexts {
+  display: flex;
+  flex-direction: column;
+}
+
+.TopTextLeaderBoardModal {
+  font-family: "RangerRegular", sans-serif;
+  position: absolute;
+  left: 16.5vw;
+  top: 7.5vh;
+}
+
+.TopTextLeaderBoardModal p:nth-of-type(1) {
+  font-size: 30px;
+  -webkit-text-stroke: 1px #444444;
+  color: transparent;
+  transform: translateX(-1rem) translateY(-2.2rem);
+}
+
+.TopTextLeaderBoardModal p:nth-of-type(2) {
+  font-size: 28px;
+  color: #fff;
+  transform: translateY(-3rem) translateX(-5px);
+}
+
+.TextDescription {
+  
+}
