--- a/styles/LeaderBoardPage.css
+++ b/styles/LeaderBoardPage.css
@@ -291,7 +291,7 @@ backdrop-filter: blur(17.9px);
 
 .NumberList {
   position: absolute;
-  left: 2rem;
+  left: 1.7rem;
   font-size: 22px;
   font-weight: 800;
 }
@@ -337,6 +337,19 @@ backdrop-filter: blur(17.9px);
   align-items: center;
   font-family: "Afacad", sans-serif;
   box-shadow: rgba(255, 0, 0, 0.162) 0px 5px 15px;
+  animation: PulseShadowLose 3s infinite;
+}
+
+@keyframes PulseShadowLose {
+  0% {
+    box-shadow: rgba(255, 0, 0, 0.16) 0px 5px 15px;
+  }
+  50% {
+    box-shadow: rgba(255, 0, 0, 0.226) 0px 5px 25px;
+  }
+  100% {
+    box-shadow: rgba(255, 0, 0, 0.16) 0px 5px 15px;
+  }
 }
 
 .LosesDivBg p:nth-of-type(1) {
@@ -367,6 +380,18 @@ backdrop-filter: blur(17.9px);
   align-items: center;
   font-family: "Afacad", sans-serif;
   box-shadow: rgba(0, 255, 115, 0.114) 0px 5px 15px;
+}
+
+@keyframes PulseShadowLose {
+  0% {
+    box-shadow: rgba(255, 0, 0, 0.16) 0px 5px 15px;
+  }
+  50% {
+    box-shadow: rgba(255, 0, 0, 0.226) 0px 5px 25px;
+  }
+  100% {
+    box-shadow: rgba(255, 0, 0, 0.16) 0px 5px 15px;
+  }
 }
 
 .WinsDivBg p:nth-of-type(1) {
@@ -423,6 +448,8 @@ backdrop-filter: blur(17.9px);
   height: 45px;
   cursor: pointer;
   transition: transform .30s ease;
+  animation: pulseSteamUsers 3s ease-in-out infinite;
+
 }
 
 .BadegsDivs img:hover {
