--- a/styles/LeaderBoardPage.css
+++ b/styles/LeaderBoardPage.css
@@ -380,19 +380,21 @@ backdrop-filter: blur(17.9px);
   align-items: center;
   font-family: "Afacad", sans-serif;
   box-shadow: rgba(0, 255, 115, 0.114) 0px 5px 15px;
+  animation: PulseShadowWin 3s infinite;
+
 }
 
-@keyframes PulseShadowLose {
+@keyframes PulseShadowWin {
   0% {
-    box-shadow: rgba(255, 0, 0, 0.16) 0px 5px 15px;
+    box-shadow: rgba(0, 255, 115, 0.114) 0px 5px 15px;
   }
   50% {
-    box-shadow: rgba(255, 0, 0, 0.226) 0px 5px 25px;
+    box-shadow: rgba(1, 150, 68, 0.274) 0px 5px 25px;
   }
   100% {
-    box-shadow: rgba(255, 0, 0, 0.16) 0px 5px 15px;
+    box-shadow: rgba(0, 255, 115, 0.114) 0px 5px 15px;
   }
-}
+  }
 
 .WinsDivBg p:nth-of-type(1) {
   position: absolute;
