--- a/styles/LeaderBoardPage.css
+++ b/styles/LeaderBoardPage.css
@@ -287,6 +287,7 @@ backdrop-filter: blur(17.9px);
   justify-content: center;
   align-items: center;
   font-family: "Afacad", sans-serif;
+  overflow: hidden;
 }
 
 .NumberList {
@@ -567,4 +568,17 @@ backdrop-filter: blur(24.2px);
   font-size: 14px;
   max-width: 340px;
   font-family: "Roboto", sans-serif;
+}
+
+.PlayerSelfDiv {
+  display: flex;
+  position: absolute;
+  width: 3px;
+  height: 100%;
+  background: #f1224d;
+  left: 0;
+  border-top-left-radius: 4px;
+  -webkit-box-shadow: 12px 0px 60px 12px #F1224D; 
+  box-shadow: 12px 0px 60px 12px #F1224D;
+  border-bottom-left-radius: 4px;
 }
