--- a/styles/Global.css
+++ b/styles/Global.css
@@ -103,11 +103,31 @@
     transition: 0.4s;
     transform: translateX(-52px);
   }
-  
 
   .closeMenu {
     position: absolute;
     right: 15px;
     top: 15px;
     z-index: 99 !important;
+  }
+
+  .custom-scrollbar::-webkit-scrollbar {
+    width: 4px;
+    height: 120px !important;
+    margin-left: 130px;
+  }
+  
+  .custom-scrollbar::-webkit-scrollbar-thumb {
+    background-color: #5a5a5a;
+    border-radius: 4px;
+  }
+  
+  .custom-scrollbar::-webkit-scrollbar-track {
+    background-color: #181818;
+  }
+  
+  .custom-scrollbar {
+    overflow-y: auto;
+    padding-right: 8px; 
+    transform: translateX(5px);
   }
