--- a/styles/SettingLobby.css
+++ b/styles/SettingLobby.css
@@ -1,5 +1,5 @@
 .SettingLobby {
-    display: none;
+    display: flex;
     justify-content: center;
     align-items: center;
     font-family: 'Roboto', sans-serif;
@@ -102,13 +102,19 @@
   flex-direction: column;
   gap: 15px;
   margin-top: 2rem;
+  max-height: 31rem;
+  overflow-y: auto;    
+  overflow-x: hidden;
+  width: 28rem;
+  z-index: 99 !important;
+
 }
 
 
 .MapSelectDiv {
   position: relative;  
   width: 27rem;
-  height: 6.7rem;
+  min-height: 6.7rem;
   cursor: pointer;
   display: flex;
   justify-content: center;
@@ -276,6 +282,8 @@
   position: absolute;
   left: 6rem;
   gap: 2rem;
+  width: 420px;
+
 }
 
 .FirstsInputs {
