Fixing other shits

--- a/styles/LobbyPage.css
+++ b/styles/LobbyPage.css
@@ -1,5 +1,5 @@
-.LobbyPage {
-    display: none;
+.LobbypageDiv {
+    display: flex;
     justify-content: center;
     align-items: center;
     font-family: 'Roboto', sans-serif;
