--- a/styles/LobbyPage.css
+++ b/styles/LobbyPage.css
@@ -45,3 +45,23 @@
     position: absolute;
     left: 0px;
 }
+
+.CreatorRoomText {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    gap: 5px;
+    left: 2rem;
+}
+
+.CreatorPtag {
+    font-size: 12px;
+    color: #868686;
+    font-family: "Roboto", sans-serif;
+}
+
+.UsenameCreatorP {
+    font-family: "Afacad", sans-serif;
+    font-size: 18px;
+    font-weight: 700;
+}
