--- a/styles/LobbyPage.css
+++ b/styles/LobbyPage.css
@@ -65,3 +65,13 @@
     font-size: 18px;
     font-weight: 700;
 }
+
+.InSdDiv {
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
+}
+
+.PrivateDiv {
+    
+}
