--- a/styles/LobbyPage.css
+++ b/styles/LobbyPage.css
@@ -105,3 +105,11 @@
     gap: 5px;
     left: 16rem;
   }
+
+  .RoundsText {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    gap: 5px;
+    left: 26rem;
+  }
