--- a/styles/LobbyPage.css
+++ b/styles/LobbyPage.css
@@ -129,3 +129,18 @@
     gap: 5px;
     left: 44rem;
 }
+
+.JoinLobbyButton {
+    position: absolute;
+    right: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.RedButton {
+    width:170px;
+    height: 55px;
+    background-color: #911e2062;
+    transform: translateY(1rem);
+}
