--- a/styles/LobbyPage.css
+++ b/styles/LobbyPage.css
@@ -141,6 +141,26 @@
 .RedButton {
     width:170px;
     height: 55px;
-    background-color: #911e2062;
+    background-color: #911e204d;
     transform: translateY(1rem);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    
 }
+
+.InsideRedButton {
+    width:150px;
+    height: 40px;
+    background: #f5262a;
+}
+
+.LineTopJoin {
+    width: 90px;
+    height: 2px;
+    background: linear-gradient(270deg,rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.812) 50%, rgba(255, 255, 255, 0) 100%);
+    position: absolute;
+    transition: transform 0.4s ease; 
+}
+
