--- a/styles/LobbyPage.css
+++ b/styles/LobbyPage.css
@@ -139,11 +139,11 @@
 }
 
 .RedButton {
-    width:170px;
-    height: 55px;
+    display: flex;
+    width:173px;
+    height: 58px;
     background-color: #911e204d;
     transform: translateY(1rem);
-    display: flex;
     align-items: center;
     justify-content: center;
     cursor: pointer;  
@@ -159,8 +159,8 @@
 }
 
 .InsideRedButton {
-    width:150px;
-    height: 40px;
+    width:153px;
+    height: 43px;
     background: #f5262a;
     position: relative;
     text-align: center;
@@ -185,6 +185,63 @@
 .LineBottomJoin {
     width: 90px;
     height: 2px;
+    background: linear-gradient(270deg,rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.812) 50%, rgba(255, 255, 255, 0) 100%);
+    position: absolute;
+        transition: all ease .30s;  
+    bottom:  0;
+    right: 0;
+}
+
+
+
+.NormalButton {
+    display: none;
+    width:170px;
+    height: 55px;
+    background-color: #911e2000;
+    transform: translateY(1rem);
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;  
+    transition: all ease .30s;
+}
+
+.NormalButton:hover .LineTopJoinNormal {
+    left: 3rem;
+}
+
+.NormalButton:hover .LineBottomJoinNormal {
+    right: 3rem;
+}
+
+.InsideNormalButton {
+    width:153px;
+    height: 43px;
+    background: #00000083;
+    border: 1px solid #474749de;  
+    position: relative;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: "inter", sans-serif;
+    font-weight: 700;
+    font-size: 13px;
+}
+
+.LineTopJoinNormal {
+    width: 90px;
+    height: 1px;
+    background: linear-gradient(270deg,rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.812) 50%, rgba(255, 255, 255, 0) 100%);
+    position: absolute;
+        transition: all ease .30s;  
+    top: 0;
+    left: 0;
+}
+
+.LineBottomJoinNormal {
+    width: 90px;
+    height: 1px;
     background: linear-gradient(270deg,rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.812) 50%, rgba(255, 255, 255, 0) 100%);
     position: absolute;
         transition: all ease .30s;  
