--- a/styles/LobbyPage.css
+++ b/styles/LobbyPage.css
@@ -404,3 +404,14 @@ backdrop-filter: blur(24.2px);
 .NormalButtonJoinPass:active {
   transform: scale(1.02);
 }
+
+.NewClose {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  cursor: pointer;
+  transition: transform ease .30s;
+}
+.NewClose:hover {
+  transform: scale(1.3) !important;
+ }
