--- a/styles/RoomLobby.css
+++ b/styles/RoomLobby.css
@@ -25,3 +25,16 @@
     display: flex;
     flex-direction: row;
 }
+
+.BottomOfmapRoomDetail {
+    display: flex;
+    flex-direction: row;
+}
+
+.GreenBottomRoom {
+    width: 16rem;
+    height: 3.7rem;
+    background: linear-gradient(180deg,rgba(33, 128, 254, 0) 0%, rgba(33, 128, 254, 0) 50%, rgba(0, 255, 8, 0.1) 100%);
+    border: .5px solid #153c1a76;
+    position: relative;
+}
