--- a/styles/RoomLobby.css
+++ b/styles/RoomLobby.css
@@ -38,6 +38,19 @@
     border: .9px solid #153c1a76;
     position: relative;
     cursor: pointer;
+    transition: all ease .30s;
+}
+
+.GreenBottomRoom:active {
+    transform: translate(3px , 3px);
+}
+
+.GreenBottomRoom:hover .GreenBottomLine {
+    right: 66px;
+}
+
+.GreenBottomRoom:hover .GreenTopLine {
+    left: 66px;
 }
 
 .GreenBottomLine {
@@ -48,6 +61,7 @@
   right: 10px;
   background: #00FF08;
   background: linear-gradient(90deg, rgba(0, 255, 8, 0) 0%, rgba(0, 255, 8, 1) 50%, rgba(0, 0, 0, 0) 100%);
+  transition: right ease .40s;
 }
 
 .GreenTopLine {
@@ -58,4 +72,5 @@
     left: 10px;
     background: #00FF08;
     background: linear-gradient(90deg, rgba(0, 255, 8, 0) 0%, rgba(0, 255, 8, 1) 50%, rgba(0, 0, 0, 0) 100%);
+    transition: left ease .40s;
   }
