--- a/styles/RoomLobby.css
+++ b/styles/RoomLobby.css
@@ -107,3 +107,73 @@
 #SetReadyText {
     display: flex;
 }
+
+
+.RedBottomRoom {
+    width: 16rem;
+    height: 3.7rem;
+    background: linear-gradient(180deg,rgba(33, 128, 254, 0) 0%, rgba(33, 128, 254, 0) 50%, rgba(0, 255, 8, 0.1) 100%);
+    border: .9px solid #153c1a76;
+    position: relative;
+    cursor: pointer;
+    transition: all ease .30s;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.RedBottomRoom:hover {
+    transform: scale(1.02);
+}
+
+.RedBottomRoom:active {
+    transform: translate(3px , 3px);
+}
+
+.RedBottomRoom:hover .RedBottomLine {
+    right: 65px;
+}
+
+.RedBottomRoom:hover .RedTopLine {
+    left: 65px;
+}
+
+.RedBottomLine {
+  height: 0.8px;
+  width: 7.5rem;
+  position: absolute;
+  bottom: 0; 
+  right: 10px;
+  background: #00FF08;
+  background: linear-gradient(90deg, rgba(0, 255, 8, 0) 0%, rgba(0, 255, 8, 1) 50%, rgba(0, 0, 0, 0) 100%);
+  transition: right ease .40s;
+}
+
+.RedTopLine {
+    height: 0.8px;
+    width: 7.5rem;
+    position: absolute;
+    top: 0; 
+    left: 10px;
+    background: #00FF08;
+    background: linear-gradient(90deg, rgba(0, 255, 8, 0) 0%, rgba(0, 255, 8, 1) 50%, rgba(0, 0, 0, 0) 100%);
+    transition: left ease .40s;
+}
+
+.InsideRedButton {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-color: transparent;
+}
+
+.InsideRedButton p { 
+    font-family: "inter", sans-serif;
+    color: #00FF08;
+    font-weight: 700;
+    font-size: 15px;
+}
