--- a/styles/RoomLobby.css
+++ b/styles/RoomLobby.css
@@ -108,6 +108,14 @@
     display: flex;
 }
 
+#DisbandLobbyText {
+    display: none;
+}
+
+#leaveTheRoomText {
+    display: flex;
+}
+
 
 .RedBottomRoom {
     width: 16rem;
@@ -159,6 +167,7 @@
     background: #00FF08;
     background: linear-gradient(90deg, rgba(0, 255, 8, 0) 0%, rgba(0, 255, 8, 1) 50%, rgba(0, 0, 0, 0) 100%);
     transition: left ease .40s;
+    
 }
 
 .InsideRedButton {
@@ -169,6 +178,10 @@
     align-items: center;
     text-align: center;
     background-color: transparent;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+
 }
 
 .InsideRedButton p { 
