--- a/styles/RoomLobby.css
+++ b/styles/RoomLobby.css
@@ -109,19 +109,20 @@
 }
 
 #DisbandLobbyText {
-    display: none;
+    display: flex;
 }
 
 #leaveTheRoomText {
-    display: flex;
+    display: none;
 }
 
 
 .RedBottomRoom {
     width: 16rem;
     height: 3.7rem;
-    background: linear-gradient(180deg,rgba(33, 128, 254, 0) 0%, rgba(33, 128, 254, 0) 50%, rgba(0, 255, 8, 0.1) 100%);
-    border: .9px solid #153c1a76;
+    background: #FF1A1A;
+    background: linear-gradient(168deg,rgba(255, 26, 26, 0) 0%, rgba(255, 26, 26, 0.03) 50%, rgba(255, 26, 26, 0.2) 100%);
+    border: .9px solid #401e1ea1;
     position: relative;
     cursor: pointer;
     transition: all ease .30s;
@@ -153,8 +154,8 @@
   position: absolute;
   bottom: 0; 
   right: 10px;
-  background: #00FF08;
-  background: linear-gradient(90deg, rgba(0, 255, 8, 0) 0%, rgba(0, 255, 8, 1) 50%, rgba(0, 0, 0, 0) 100%);
+  background: #FF1A1A;
+  background: linear-gradient(90deg,rgba(255, 26, 26, 0) 0%, rgba(255, 26, 26, 1) 50%, rgba(0, 0, 0, 0) 100%);
   transition: right ease .40s;
 }
 
@@ -164,8 +165,8 @@
     position: absolute;
     top: 0; 
     left: 10px;
-    background: #00FF08;
-    background: linear-gradient(90deg, rgba(0, 255, 8, 0) 0%, rgba(0, 255, 8, 1) 50%, rgba(0, 0, 0, 0) 100%);
+    background: #FF1A1A;
+    background: linear-gradient(90deg,rgba(255, 26, 26, 0) 0%, rgba(255, 26, 26, 1) 50%, rgba(0, 0, 0, 0) 100%);
     transition: left ease .40s;
     
 }
@@ -186,7 +187,7 @@
 
 .InsideRedButton p { 
     font-family: "inter", sans-serif;
-    color: #00FF08;
+    color: #FC1A1A;
     font-weight: 700;
     font-size: 15px;
 }
